# impedance_reference_generator

./: CMakeLists.txt  README.md  package.xml
.github/: CODEOWNERS
config/: arm.yaml  leg.yaml  parameters.yaml
include/impedance_reference_generator/: kinematic_reference.hpp
src/: kinematic_reference.cpp  kinematic_reference_parameters.yaml
