<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>impedance_reference_generator</name>
  <version>1.0.0</version>
  <description>
    Generate reference signals for robot impedance controllers based on the kinematic_pose_msgs.
  </description>
  <maintainer email="44267124+qleonardolp@users.noreply.github.com">qleonardolp</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>kinematic_pose_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
